Testando Yasnipets de resenhas. TODO: Remover número da resenha; Criar tabela dinâmica; Atualizar propriedade das notas.

--- a/Materias/2S2020/PED_CE342/Turma_A/213360.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/213360.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-15 qui 18:52
+% Created 2020-10-15 qui 18:53
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -29,11 +29,15 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \usepackage{attachfile}
 \usepackage{setspace}
 \usepackage{tikz}
-\author{Gabriel Petrini (PED) Gabriel Petrini (PED)}
-\date{2020/2S}
-\title{Notas CE 342/A 213360 - Augusto Lima Alves}
+\author{Gabriel Petrini (PED)}
+\date{\today}
+\title{213360 - Augusto Lima Alves}
 \begin{document}
 
 \maketitle
 
+\section*{Resenha 1: Monetariastas\hfill{}\textsc{private}}
+\label{sec:org89e696a}
+\subsection*{Comentários individuais}
+\label{sec:org87c90fc}
 \end{document}
