Atualizando Yasnipets de resenhas.

--- a/Materias/2S2020/PED_CE342/Turma_A/213360.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/213360.org
@@ -1,15 +1,32 @@
-#+OPTIONS: toc:nil num:nil
+#+OPTIONS: toc:nil num:nil tag:nil
 #+TITLE: 213360 - Augusto Lima Alves
 #+AUTHOR: Gabriel Petrini (PED)
 #+PROPERTY: RA 213360
 #+PROPERTY: NOME "Augusto Lima Alves"
 #+INCLUDE_TAGS: private
+#+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
 #+PROPERTY: OBJETIVO_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: CONCEITOS_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: ARGUMENTO_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: DESENVOLVIMENTO_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: CONCLUSAO_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: CLAREZA_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: NOTA_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
 
-* Resenha 1: Monetariastas                                          :private:
+
+* Notas :private:
+
+  #+BEGIN: columnview :maxlevel 3 :id global
+  | Tarefa    | Objetivo | Conceito | Argumento | Desenvolvimento | Clareza | Nota |
+  |-----------+----------+----------+-----------+-----------------+---------+------|
+  |           |          |          |           |                 |         |      |
+  | Resenha 1 |          |          |           |                 |         |      |
+  |           |          |          |           |                 |         |      |
+  #+END
+
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
-  :NRESENHA: 1
   :TAREFA:   Resenha 1
   :OBJETIVO:
   :ARGUMENTO:
@@ -17,6 +34,7 @@
   :DESENVOLVIMENTO:
   :CONCLUSAO:
   :CLAREZA:
+  :NOTA:
   :END:
 
 ** Comentários individuais 
