--- a/Materias/2S2020/PED_CE342/Turma_A/213360.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/213360.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-15 qui 18:53
+% Created 2020-10-15 qui 19:04
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -36,8 +36,22 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 \maketitle
 
-\section*{Resenha 1: Monetariastas\hfill{}\textsc{private}}
-\label{sec:org89e696a}
+
+\section*{Notas}
+\label{sec:org87659aa}
+
+\begin{center}
+\begin{tabular}{lllllll}
+Tarefa & Objetivo & Conceito & Argumento & Desenvolvimento & Clareza & Nota\\
+\hline
+ &  &  &  &  &  & \\
+Resenha 1 &  &  &  &  &  & \\
+ &  &  &  &  &  & \\
+\end{tabular}
+\end{center}
+
+\section*{Resenha 1: Monetaristas}
+\label{sec:org5552551}
 \subsection*{Comentários individuais}
-\label{sec:org87c90fc}
+\label{sec:org86c7d4d}
 \end{document}
