--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-10 sáb 15:36
+% Created 2020-10-16 sex 18:14
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
   \usepackage{csquotes, caption}
@@ -16,9 +16,9 @@
 
 
 \section{Introdução}
-\label{sec:org066f685}
+\label{sec:orgbe60328}
 
-\begin{frame}[label={sec:org9636249}]{Estrutura de tópicos e convenções}
+\begin{frame}[label={sec:org6f4d8d6}]{Estrutura de tópicos e convenções}
 A aula terá a seguinte estrutura
 
 \begin{itemize}
@@ -34,9 +34,9 @@ A aula terá a seguinte estrutura
 \end{frame}
 
 \section{O cenário internacional, o setor externo e a herança maldita}
-\label{sec:orgb517985}
+\label{sec:orgcbaaa4b}
 
-\begin{frame}[label={sec:org0e51c83}]{Panorama Internacional}
+\begin{frame}[label={sec:orgd160acf}]{Panorama Internacional}
 \begin{itemize}
 \item Crise Mexicana (1994/5)
 \item Brasileira (1998/9)
@@ -44,7 +44,7 @@ A aula terá a seguinte estrutura
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org21a8cf5}]{Crescimento e desequilíbrios globais}
+\begin{frame}[label={sec:org7934b47}]{Crescimento e desequilíbrios globais}
 Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâmico e desequiblibrado entre 2002/3 a 2007/8
 
 \alert{Engrenagem comercial com 3 elos}
@@ -67,7 +67,7 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7807fb3}]{A Herança Maldita}
+\begin{frame}[label={sec:orgce83e4c}]{A Herança Maldita}
 \begin{itemize}
 \item Instabilidade macroeconômica
 \begin{itemize}
@@ -85,9 +85,9 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 
 
 \section{Governos Lula e suas fases}
-\label{sec:orgb1e0861}
+\label{sec:org160dc60}
 
-\begin{frame}[label={sec:org8c00462}]{Primeira Fase}
+\begin{frame}[label={sec:orgfc50a4c}]{Primeira Fase}
 Experimento desenvolvimentista junto de uma política macroeconômica conservadora:
 \begin{itemize}
 \item Continuidade do tripé
@@ -105,7 +105,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \alert{Contexto de transição complexa:} desconfiança dos credores e pressões financeiras
 \end{frame}
 
-\begin{frame}[label={sec:orgdd8295f}]{Segunda fase}
+\begin{frame}[label={sec:org33d0d28}]{Segunda fase}
 \begin{itemize}
 \item Retomada do Estado como elemento condutor do Crescimento
 \item Desenho da política fiscal no centro de proposta do desenvolvimento
@@ -116,7 +116,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{frame}
 
 
-\begin{frame}[label={sec:orgae45d84}]{Fatores determinantes}
+\begin{frame}[label={sec:orgdd9e16e}]{Fatores determinantes}
 \begin{itemize}
 \item Impulsos externos favoráveis
 \begin{itemize}
@@ -137,7 +137,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgda6aaa1}]{Alguns resultados}
+\begin{frame}[label={sec:org2104c7e}]{Alguns resultados}
 \begin{itemize}
 \item Queda da taxa de desemprego aberta
 \item Valorização real do salário mínimo
@@ -156,9 +156,9 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 
 
 \section{(Des)Continuidades e dificuldades}
-\label{sec:org9bafcc0}
+\label{sec:org0f655ea}
 
-\begin{frame}[label={sec:org500a00e}]{Continuidades}
+\begin{frame}[label={sec:org0b5fffc}]{Continuidades}
 \begin{block}{Política cambial}
 Pouco mudou ao longo do tempo
 
@@ -190,7 +190,7 @@ Não foi alterado o regime fiscal definido na era FHC
 \end{frame}
 
 
-\begin{frame}[label={sec:orge4211d6}]{Descontinuidades}
+\begin{frame}[label={sec:org6499bb7}]{Descontinuidades}
 Conjugação de políticas de incentivo à renda e ao mercado interno
 
 \begin{itemize}
@@ -210,7 +210,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:orgce5002c}]{Dificuldades}
+\begin{frame}[label={sec:orgc9dada9}]{Dificuldades}
 \begin{itemize}
 \item Limites do crescimento com expansão da demanda de consumo via crédito e políticas sociais
 \item Retomada da taxa de investimento, mas nível baixo
@@ -223,12 +223,12 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 \section{Governo(s?) Dilma}
-\label{sec:org0a58484}
+\label{sec:org5b63e1e}
 
-\begin{frame}[label={sec:org62fdb14}]{Os três tenores}
+\begin{frame}[label={sec:org7ce2f36}]{Os três tenores}
 \end{frame}
 
-\begin{frame}[label={sec:org555269d}]{Medidas macroprudenciais}
+\begin{frame}[label={sec:org5d09368}]{Medidas macroprudenciais}
 \alert{Medidas macroprudenciais:*} Redução do crescimento do crédito.
 
 \begin{itemize}
@@ -249,7 +249,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:org513204a}]{Desaceleração rudimentar I}
+\begin{frame}[label={sec:org5c81e71}]{Desaceleração rudimentar I}
 \begin{center}
 \begin{tabular}{lll}
 \hline
@@ -264,7 +264,7 @@ Taxa de desemprego & 9.0\% & 5.4\%\\
 \alert{Principal mudança:} do incentivo à demanda agregada ao incetivo ao investimento privado.
 \end{frame}
 
-\begin{frame}[label={sec:org27f6cb4}]{Desaceleração rudimentar II}
+\begin{frame}[label={sec:org6297a0c}]{Desaceleração rudimentar II}
 \begin{table}[htbp]
 \caption{Consumo das famílias}
 \centering
@@ -280,7 +280,7 @@ Renda disponível real das famílias & 5,3\% & 1,2\%\\
 \end{table}
 \end{frame}
 
-\begin{frame}[label={sec:org3dbbd3f}]{Desaceleração rudimentar III}
+\begin{frame}[label={sec:org4261af2}]{Desaceleração rudimentar III}
 \begin{table}[htbp]
 \caption{Política fiscal}
 \centering
@@ -296,23 +296,22 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org1ac8cc8}]{Prêambulo para a ópera do fim do mundo}
+\begin{frame}[label={sec:org133caeb}]{Prêambulo para a ópera do fim do mundo}
 \href{./opera.jpg}{Brasil, o Golpe: A Ópera do fim do mundo - Flávio Tavares}
 \end{frame}
 
 \section{Idade das trevas}
-\label{sec:orgd0a42ef}
+\label{sec:org92aa18d}
 
 \section{Dados}
-\label{sec:orgbda214c}
+\label{sec:org2bb013d}
 
-
-\begin{frame}[label={sec:org4f072e3}]{Índice EMBI Brasil (Fim de período)}
+\begin{frame}[label={sec:orgbf3cefd}]{Índice EMBI Brasil (Fim de período)}
 \end{frame}
 
 
 
-\begin{frame}[label={sec:orgd7226ca}]{O ciclo das commodities}
+\begin{frame}[label={sec:orgb39cdad}]{O ciclo das commodities}
 \begin{figure}[htb]
 \centering
 \caption{Índice de Commodities - Brasil\\Média móvel 12 meses} 
@@ -322,61 +321,155 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orge6f8ac6}]{O ciclo de liquidez internacional para países emergentes}
+\begin{frame}[label={sec:org980509a}]{O ciclo de liquidez internacional para países emergentes}
 \alert{Dado:} IIF (?)
 \end{frame}
 
-\begin{frame}[label={sec:orgba04616}]{Evolução das reservas internacionais líquidas}
+\begin{frame}[label={sec:org05c3d31}]{Evolução das reservas internacionais líquidas}
+\begin{figure}[htb]
+\centering
+\caption{Reservas Internacionais} 
+\includegraphics[width = 0.9\textwidth]{./figs/Reservas_Internacionais.png}
+\label{fig:reservas}
+\caption*{\textbf{Fonte:} BCB-DSTAT}
+\end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgf3279bf}]{PIB puxado pelo mercado doméstico}
+
+\begin{frame}[label={sec:orgd056b72}]{PIB puxado pelo mercado doméstico}
 \alert{Dado:} Decomposição do crescimento (doméstico e exportações líquidas)
 \end{frame}
 
-\begin{frame}[label={sec:orgcf0bfac}]{Crescimento e o investimento induzido}
+\begin{frame}[label={sec:org0dbe2ae}]{Crescimento e o investimento induzido}
 \alert{Dado:} Decomposição do crescimento (Todos os componentes da demanda)
 \end{frame}
 
 
-\begin{frame}[label={sec:org15e842a}]{Crédito total}
+\begin{frame}[label={sec:org89fd3f6}]{Saldo de Crédito}
+\begin{figure}[htb]
+\centering
+\caption{Saldo de Crédito\\em \% do PIB} 
+\includegraphics[width = 0.9\textwidth]{./figs/Credito.png}
+\label{fig:Credito}
+\caption*{\textbf{Fonte:} BCB-DSTAT}
+\end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orga98f4d6}]{Emprego}
-\alert{Dado:} EVOLUÇÃO DO NÚMERO TOTAL DE EMPREGADOS COM VÍNCULO FORMAL  DE EMPREGO - MTE/RAAIS
+
+\begin{frame}[label={sec:orgc633c6c}]{Emprego}
+\begin{figure}[htb]
+\centering
+\caption{Índice do Emprego Formal} 
+\includegraphics[width = 0.9\textwidth]{./figs/EmpregoFormal.png}
+\label{fig:EmpFormal}
+\caption*{\textbf{Fonte:} MTb}
+\end{figure}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgde65974}]{Evolução do salário mínimo real}
+\begin{frame}[label={sec:org61f3e00}]{Evolução dos rendimentos (I)}
+\begin{figure}[htb]
+\centering
+\caption{Rendimento médio real efetivo das pessoas ocupadas\\ Não desazonalizada} 
+\includegraphics[width = 0.9\textwidth]{./figs/RendimentoEfetivo.png}
+\label{fig:RendimentoE}
+\caption*{\textbf{Fonte:} IBGE}
+\end{figure}
+
+\alert{Nota:} Esta séria foi descontinuada
 \end{frame}
 
-\begin{frame}[label={sec:org579b585}]{Consumo das famílias}
+
+\begin{frame}[label={sec:orgce02e13}]{Evolução dos rendimentos (II)}
+\begin{figure}[htb]
+\centering
+\caption{Massa de rendimento real habitual de todos os trabalhos} 
+\includegraphics[width = 0.9\textwidth]{./figs/RendimentoHabitual.png}
+\label{fig:RendimentoH}
+\caption*{\textbf{Fonte:} IBGE}
+\end{figure}
+
+\alert{Memo:} Série anterior descontinuada
 \end{frame}
 
-\begin{frame}[label={sec:orgef4ecee}]{Investimento público em recuperação}
+\begin{frame}[label={sec:orge4e605d}]{Consumo das famílias}
+\begin{figure}[htb]
+\centering
+\caption{Consumo das famílias\\Jan/1995=100} 
+\includegraphics[width = 0.9\textwidth]{./figs/ConsumoFamilias.png}
+\label{fig:Consumo}
+\caption*{\textbf{Source:} IBGE}
+\end{figure}
+\end{frame}
+
+\begin{frame}[label={sec:orgc4c25a8}]{Endividamento das famílias}
+\begin{figure}[htb]
+\centering
+\caption{Endividamento das famílias\\em \% do PIB} 
+\includegraphics[width = 0.65\textwidth]{./figs/EndividamentoFam.png}
+\label{fig:Endiv}
+\caption*{\textbf{Fonte:} BCB}
+\end{figure}
+\end{frame}
+
+
+\begin{frame}[label={sec:orgc7a9050}]{Investimento público em recuperação}
 \alert{Dado:} Taxa de investimento público (\%PIB)
 \end{frame}
 
-\begin{frame}[label={sec:org37716d4}]{A evolução favorável da dívida pública}
+\begin{frame}[label={sec:org678f90d}]{A evolução favorável da dívida pública}
 \alert{Dado:} Evolução da dívida bruta e líquida (\%PIB)
 \end{frame}
 
-\begin{frame}[label={sec:org753134b}]{Superávit primário}
+\begin{frame}[label={sec:orgaae9082}]{Superávit primário}
 \end{frame}
 
-\begin{frame}[label={sec:orgb2a08f7}]{Relação dívida externa líquida}
+\begin{frame}[label={sec:orgbb5d0f3}]{Dívida líquida do setor público}
+\begin{figure}[htb]
+\centering
+\caption{Dívida líquida do Governo Federal e Banco Central\\em \% do PIB} 
+\includegraphics[width = 0.9\textwidth]{./figs/DividaLiquida.png}
+\label{fig:divliq}
+\caption*{\textbf{Source:} BCB-DSTAT}
+\end{figure}
 \end{frame}
 
 
-\begin{frame}[label={sec:orga3e118f}]{Taxa de câmbio nominal}
+
+\begin{frame}[label={sec:org9c28bf8}]{Taxa de câmbio nominal}
+\begin{figure}[htb]
+\centering
+\caption{ Índice da taxa de câmbio efetiva nominal\\Jun/1994=100 } 
+\includegraphics[width = 0.9\textwidth]{./figs/CambioNominal.png}
+\label{fig:cambio}
+\caption*{\textbf{Fonte:} BCB-DSTAT}
+\end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgbfc65e0}]{Taxa de juros selic}
+
+\begin{frame}[label={sec:org33c41f7}]{Taxa de juros selic}
+\begin{figure}[htb]
+\centering
+\caption{Taxa de juros selic a.a. (efetivo x meta)\\Anualizada base 252} 
+\includegraphics[width = 0.9\textwidth]{./figs/Selic.png}
+\label{fig:Selic}
+\caption*{\textbf{Fonte:} Copom e BCB-Demab}
+\end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgb76e00a}]{Preços livres vs Administrados}
+
+\begin{frame}[label={sec:org3ac8ee9}]{Preços livres vs Administrados}
 \end{frame}
 
-\begin{frame}[label={sec:orgb75de25}]{Finalmente, inflação (ops, IPCA)}
-\alert{Dado:} IPCA, centro da meta e limites
+\begin{frame}[label={sec:org91eb2b1}]{Finalmente, inflação (ops, IPCA)}
+\alert{TODO:} Revisar IPCA
+
+\begin{figure}[htb]
+\centering
+\caption{IPCA e Metas para Inflação} 
+\includegraphics[width = 0.9\textwidth]{./figs/IPCA.png}
+\label{fig:IPCA}
+\caption*{\textbf{Fonte:} BCB}
+\end{figure}
 \end{frame}
 \end{document}
