--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-15 qui 18:52
+% Created 2020-10-15 qui 19:18
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -36,4 +36,15 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 \maketitle
 
+
+\section*{Notas}
+\label{sec:org08ce4dc}
+
+\begin{center}
+\begin{tabular}{lll}
+RA & Tarefa & Nota\\
+\hline
+ &  & \\
+\end{tabular}
+\end{center}
 \end{document}
